--- a/api/package.json
+++ b/api/package.json
@@ -12,10 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.2",
-    "mysql2": "^2.3.3"
+    "express-async-errors": "^3.1.1",
+    "express-fileupload": "^1.3.1",
+    "mysql2": "^2.3.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.2.2",
+    "@types/uuid": "^8.3.4",
     "ts-node": "^10.5.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
