--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "author": "Daniel Łęczycki",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
     "express-fileupload": "^1.3.1",
@@ -18,6 +19,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-fileupload": "^1.2.2",
     "@types/uuid": "^8.3.4",
